--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "amis-boilerplate",
+  "name": "icode-fe",
   "version": "1.0.0",
-  "description": "基于 amis 的项目模板",
+  "description": "icode-fe project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,19 +9,21 @@
     "gh-pages": "rm -rf gh-pages && fis3 release gh-pages -c",
     "deploy-gh-pages": "git subtree push --prefix gh-pages origin gh-pages"
   },
-  "keywords": [
-    "amis",
-    "boilerplate",
-    "admin",
-    "react"
-  ],
-  "author": "fex",
-  "license": "MIT",
+  "author": "9z",
+  "license": "9Z",
   "devDependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "axios": "^1.7.6",
+    "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
+    "express": "^4.21.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "reload": "^3.1.1"
+  },
+  "dependencies": {
+    "amis": "^6.9.0",
+    "history": "^4.10.1",
+    "js-yaml": "^4.1.0",
+    "vue": "^2.7.16"
   }
 }
