--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /node_modules
 /package-lock.json
 /gh-pages
+/dist/
+/amis 实战教程.docx
+/.idea/icode_fe.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/.name
+/.idea/
